--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -111,7 +111,7 @@ input:checked + .slider:before {
 html,
 body {
   height: 100%;
-  overflow-x: hidden;
+  overflow: hidden;
   width: 100%;
   position: relative;
   overscroll-behavior-x: none;
